public-api/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api
  namespace: public-stage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: KUSTOMIZE DEFINED # SE DEFINE EN EL OVERLAYS
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-public-api
            port:
              number: 3000
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: svc-public-api
            port:
              number: 3000
